SSCSFT-133 Create and Display Confidentiality Tab for CM cases