@@ -1,7 +1,10 @@
 package uk.gov.hmcts.reform.sscs.evidenceshare.callback.handlers;
 
 import static java.util.Collections.singletonList;
-import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.then;
@@ -114,16 +117,14 @@ class SendToBulkPrintHandlerTest {
     void givenAValidAppealCreatedEvent_thenReturnTrue() {
         when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
-        when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
-        when(callback.getCaseDetails()).thenReturn(caseDetails);
-        assertThat(handler.canHandle(SUBMITTED, callback)).isTrue();
+        assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
     void givenANonBulkPrintEvent_thenReturnFalse() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
 
-        assertThat(handler.canHandle(SUBMITTED, callback)).isFalse();
+        assertFalse(handler.canHandle(SUBMITTED, callback));
     }
 
     @ParameterizedTest
@@ -136,14 +137,14 @@ class SendToBulkPrintHandlerTest {
 
         when(callback.getEvent()).thenReturn(EventType.valueOf(eventType));
 
-        assertThat(handler.canHandle(SUBMITTED, callback)).isTrue();
+        assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
     void givenANonSendToBulkPrintEvent_thenReturnFalse() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
 
-        assertThat(handler.canHandle(SUBMITTED, callback)).isFalse();
+        assertFalse(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
@@ -151,7 +152,7 @@ class SendToBulkPrintHandlerTest {
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(callback.getEvent()).thenReturn(EventType.SEND_TO_DWP);
 
-        assertThat(handler.canHandle(SUBMITTED, callback)).isTrue();
+        assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
@@ -159,7 +160,7 @@ class SendToBulkPrintHandlerTest {
         caseDetails.getCaseData().setTranslationWorkOutstanding("Yes");
         caseDetails.getCaseData().isTranslationWorkOutstanding();
 
-        assertThat(handler.canHandle(SUBMITTED, callback)).isFalse();
+        assertFalse(handler.canHandle(SUBMITTED, callback));
     }
 
     @Test
@@ -167,14 +168,13 @@ class SendToBulkPrintHandlerTest {
         when(callback.getEvent()).thenReturn(EventType.RESEND_TO_DWP);
         caseDetails.getCaseData().setTranslationWorkOutstanding("Yes");
 
-        assertThat(handler.canHandle(SUBMITTED, callback)).isTrue();
+        assertTrue(handler.canHandle(SUBMITTED, callback));
     }
 
     @ParameterizedTest
     @CsvSource({"pip, 35", "childSupport, 42"})
     void givenAMessageWhichFindsATemplate_thenConvertToSscsCaseDataAndAddPdfToCaseAndSendToBulkPrint(String benefitType,
         int expectedResponseDays) {
-
         when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
 
         CaseDetails<SscsCaseData> caseDetails = getCaseDetails(benefitType, "Paper", Arrays.asList(
@@ -220,9 +220,7 @@ class SendToBulkPrintHandlerTest {
             documentRequestFactory, pdfStoreService, bulkPrintService, evidenceShareConfig, updateCcdCaseService,
             idamService, 35, 42, false);
 
-        new SendToBulkPrintHandler(documentManagementServiceWrapper,
-            documentRequestFactory, pdfStoreService, bulkPrintService, evidenceShareConfig, updateCcdCaseService,
-            idamService, 35, 42, false).handle(CallbackType.SUBMITTED, callback);
+        handler.handle(CallbackType.SUBMITTED, callback);
 
         verify(pdfStoreService, times(2)).download(eq(docUrl));
         verify(bulkPrintService).sendToBulkPrint(eq(Arrays.asList(docPdf, docPdf2)), any(), any());
@@ -237,11 +235,11 @@ class SendToBulkPrintHandlerTest {
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
 
-        assertThat(sscsCaseData.getSscsDocument().getFirst().getValue().getEvidenceIssued()).isNull();
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo(SENT_TO_DWP.getCcdType());
-        assertThat(sscsCaseData.getDateSentToDwp()).isEqualTo(LocalDate.now().toString());
-        assertThat(sscsCaseData.getDwpDueDate()).isEqualTo(LocalDate.now().plusDays(expectedResponseDays).toString());
-        assertThat(sscsCaseData.getDwpState()).isNull();
+        assertNull(sscsCaseData.getSscsDocument().getFirst().getValue().getEvidenceIssued());
+        assertEquals(sscsCaseData.getHmctsDwpState(), SENT_TO_DWP.getCcdType());
+        assertEquals(sscsCaseData.getDateSentToDwp(), LocalDate.now().toString());
+        assertEquals(sscsCaseData.getDwpDueDate(), LocalDate.now().plusDays(expectedResponseDays).toString());
+        assertNull(sscsCaseData.getDwpState());
     }
 
     @Test
@@ -258,7 +256,7 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
@@ -290,8 +288,8 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
-        assertThat(sscsCaseData.getSscsDocument().getFirst().getValue().getEvidenceIssued()).isEqualTo("No");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
+        assertEquals("No", sscsCaseData.getSscsDocument().get(0).getValue().getEvidenceIssued());
     }
 
     @Test
@@ -315,7 +313,7 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
@@ -338,12 +336,11 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
     void givenAErrorDownloadingDocuments_shouldThrowAnExceptionAndFlagAnError() {
-
         when(callback.getEvent()).thenReturn(EventType.VALID_APPEAL_CREATED);
         when(evidenceShareConfig.getSubmitTypes()).thenReturn(singletonList("paper"));
         when(callback.getCaseDetails()).thenReturn(caseDetails);
@@ -367,7 +364,7 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
@@ -389,7 +386,7 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
@@ -417,7 +414,7 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
@@ -462,8 +459,8 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo(SENT_TO_DWP.getCcdType());
-        assertThat(sscsCaseData.getDwpState()).isEqualTo(UNREGISTERED);
+        assertEquals(SENT_TO_DWP.getCcdType(), sscsCaseData.getHmctsDwpState());
+        assertEquals(UNREGISTERED, sscsCaseData.getDwpState());
     }
 
     @Test
@@ -504,7 +501,7 @@ class SendToBulkPrintHandlerTest {
         SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         SscsCaseDetails sscsCaseDetails = SscsCaseDetails.builder().data(sscsCaseData).build();
         consumerArgumentCaptor.getValue().accept(sscsCaseDetails);
-        assertThat(sscsCaseData.getHmctsDwpState()).isEqualTo("failedSending");
+        assertEquals("failedSending", sscsCaseData.getHmctsDwpState());
     }
 
     @Test
